# Jailbase-API-Rust

back_end/: Cargo.toml  cert.pem  csr.pem  key.pem
back_end/data/: accounts.json  cellData.json  data.json  logs.json
back_end/src/: main.rs
back_end/src/api/: account.rs  api.rs  logger.rs  mod.rs  socket.rs
front_end/: app.js  index.html  style.css
