[package]
name = "jailbase-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
mongodb = "2.3.1"
json = "0.12.4"
actix-web = "4.2.1"
actix-cors = "0.6.4"
json-writer = "0.2.1"
serde = { version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
env_logger = "0.10.0"